--- a/markdowns/1/1_0.md
+++ b/markdowns/1/1_0.md
@@ -4,10 +4,10 @@
 
 ## افسانه برنامه نویس نابغه
 
-ازونجایی که این کتاب در مورد خطرات روابط اجتماعی در توسعه دهی محصولات خلاقانه هست، به نظر منطقی میاد که تمرکزمون رو تنها متغیری که شما قطعا روش کنترل دارین، بذاریم: یعنی خود شما. 
+از آن جایی که این کتاب در مورد خطرات روابط اجتماعی در توسعه دهی محصولات خلاقانه است، به نظر منطقی می آید که تمرکزمان را روی تنها متغیری که شما قطعا به آن کنترل دارید، بگذاریم: یعنی خود شما. 
 
-به طور ذاتی، انسان ها هیچ وقت کامل نیستند. ولی قبل ازینکه عیب و ایرادهای همکارهای خودتون رو بسنجید، لازمه که مشکلات و نقص های شخصی خودتون رو درک کنید. ما میخوایم که در مورد رفتارها، خلق و خو و واکنشهای خودتون فکر کنید و در نتیجه این تفکر امیدواریم که ایده بهتری در مورد اینکه چطور میشه یه برنامه نویس کارآمد و موفق شد به دست بیارید. نهایتا شما انرژی کمتری رو برای سر و کله زدن با انسان ها هدر خواهید داد و وقت بیشتری رو صرف کدنویسی خواهید کرد. 
+به طور ذاتی، انسان ها هیچ وقت کامل نیستند. ولی قبل ازینکه عیب و ایرادهای همکارهای خودتان را بسنجید، لازم است که مشکلات و نقص های شخصی خودتون را درک کنید. ما می خواهیم که در مورد رفتارها، خلق و خو و واکنش های خودتان فکر کنید و در نتیجه این تفکر امیدواریم که ایده بهتری در مورد اینکه چطور می شود یک برنامه نویس کارآمد و موفق شد به دست آورید. نهایتاً شما انرژی کمتری را برای سر و کله زدن با انسان ها هدر خواهید داد و وقت بیشتری را صرف کدنویسی خواهید کرد. 
 
-نکته مهم و اصلی این فصل اینه که شما درک کنید برنامه نویسی یه کار تیمیه. و برای اینکه در یک تیم مهندسی (یا هر تیم خلاقانه دیگری) موفق باشید، باید اخلاق و رفتار خودتون رو روی سه محور اصلی تواضع، احترام و اعتماد برقرار کنید. 
-قبل ازینکه جلوتر بریم، بیاین شروع کنیم ببینیم برنامه نویس ها به طور کلی چطور رفتار میکنند. 
+نکته مهم و اصلی این فصل این است که شما درک کنید برنامه نویسی یک کار تیمی است. و برای این که در یک تیم مهندسی (یا هر تیم خلاقانه دیگری) موفق باشید، باید اخلاق و رفتار خودتان را روی سه محور اصلی تواضع، احترام و اعتماد برقرار کنید. 
+قبل از این که جلوتر بریم، برای شروع بهتر است ببینیم برنامه نویس ها به طور کلی چطور رفتار میکنند. 
 </div>
