made some updates to chapter 2. Chapter 2 revisions are not complete yet

--- a/markdowns/2/2_0.md
+++ b/markdowns/2/2_0.md
@@ -4,6 +4,6 @@
 
 ## ساخت فرهنگ تیمی فوق العاده
 
-فرهنگ تیم ها با همدیگه بسیار متفاوته و هر تیمی ارزش ها و هنجارهای مخصوص به خودش رو تعریف میکنه. بعضی از تیم ها در راستای موفقیت حرکت میکنند در حالی که بعضی رو به شکست هستند. ولی حتی بین آن دسته از تیم ها که فرهنگ کار گروهیشان آنها رو در مسیر موفقیت قرار داده، هم تیم هایی پیدا میشوند که به شدت کارآمد هستند و تلاش بیشتر اعضا رو در راستای رسیدن به هدف تیمی قرار میدهند، و هم تیم هایی وجود دارند که فرهنگشون مزاحم رسیدنشون به هدفه. در این فصل ما در مورد فرهنگ کار تیمی صحبت خواهیم کرد و به طور خاص روی مهارت های مناسب ارتباطی بین اعضای تیم تمرکز خواهیم کرد. ما نشان خواهیم داد که چطور استفاده از این تکنیک ها باعث بهبود کارایی تیم ها در تولید یه محصول خلاقانه خواهند شد. 
+فرهنگ تیم ها با تفاوت های بسیاری دارد. هر تیمی ارزش ها و هنجارهای مخصوص به خودش را تعریف میکند. بعضی از تیم ها در راستای موفقیت حرکت میکنند در حالی که بعضی رو به شکست هستند. ولی حتی بین آن دسته از تیم ها که فرهنگ کار گروهیشان آنها را در مسیر موفقیت قرار داده نیز، تیم هایی پیدا میشوند که به شدت کارآمد هستند و تلاش بیشتر اعضا را در راستای رسیدن به هدف تیمی قرار میدهند. تیم هایی هم وجود دارند که فرهنگشان مزاحم رسیدنشان به هدف است. در این فصل ما درباره فرهنگ کار تیمی صحبت خواهیم کرد و به طور خاص روی مهارت های مناسب ارتباطی بین اعضای تیم تمرکز خواهیم کرد. ما نشان خواهیم داد که چطور استفاده از این تکنیک ها باعث بهبود کارایی تیم ها در تولید یک محصول خلاقانه خواهند شد. 
 
 </div>
