Replaced persian Giume with latin quotation mark
Chapter: 3

--- a/markdowns/3/3_0.md
+++ b/markdowns/3/3_0.md
@@ -4,7 +4,7 @@
 
 ## هر قایقی یک کاپیتان لازم دارد
 
-حتی اگر به جان مادرتان قسم خورده باشید که هیچ وقت نمی خواهید یک "مدیر" شوید، بالاخره در برهه از زندگی کاریتان تصادفاً مجبور خواهید شد که پروژه ای را مدیریت کنید. این فصل به شما یاد می دهد که در چنین حالتی چگونه عمل کنید. 
+حتی اگر به جان مادرتان قسم خورده باشید که هیچ وقت نمی خواهید یک «مدیر» شوید، بالاخره در برهه از زندگی کاریتان تصادفاً مجبور خواهید شد که پروژه ای را مدیریت کنید. این فصل به شما یاد می دهد که در چنین حالتی چگونه عمل کنید. 
 
 ده ها کتاب برای مدیران و با موضوع مدیریت نوشته شده است. اما این فصل برای آن دسته از اعضای تیم صحبت می کند که به طور اتفاقی خودشان را در جایگاه رهبری و مدیریت یک پروژه می بینند. بیشتر آدم ها به دلایل مختلف از مدیر بودن واهمه دارند، ولی هیچ تیمی نمی تواند بدون یک رهبر کارهایش را پیش ببرد. هدف ما این نیست که شما را متقاعد کنیم که مدیر بشوید (هرچند که ما هر دو اکنون مدیر هستیم!). ما به دنبال این هستیم که به شما نشان دهیم چرا تیم ها به مدیریت نیاز دارند، چرا عده ای از رهبری تیمشان گریزانند، و چرا بهترین مدیران، تیمشان را بر پایه و اساس اصول تواضع، احترام و اطمینان مدیریت می کنند. علاوه بر آن، درباره الگوهای درست و غلط مدیریت نیز صحبت خواهیم کرد. 
 
